// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transcript > should render Transcript component and KeywordPills with initial keywords 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex p-3"
      >
        <div
          class="w-full"
        >
          <h3
            class="text-center text-2xl font-bold mb-4 text-gray-800"
          >
            Transcript
          </h3>
          <div
            class="bg-white rounded-lg shadow-md p-6 mb-4"
          >
            <h4
              class="text-lg font-semibold text-gray-800 border-b border-gray-200 pb-2 mb-4"
            >
              Keywords
            </h4>
            <div
              class="flex flex-wrap gap-2 mb-4"
            >
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                madison
                <button
                  aria-label="Remove madison"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                james
                <button
                  aria-label="Remove james"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                quote
                <button
                  aria-label="Remove quote"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                yesterday
                <button
                  aria-label="Remove yesterday"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                isabel
                <button
                  aria-label="Remove isabel"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
              <span
                class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
              >
                today
                <button
                  aria-label="Remove today"
                  class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="w-2 h-2"
                    fill="none"
                    viewBox="0 0 14 14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Remove pill
                  </span>
                </button>
              </span>
            </div>
            <div
              class="flex gap-2"
            >
              <input
                class="grow p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                placeholder="Add new keyword"
                type="text"
                value=""
              />
              <button
                class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
                type="button"
              >
                Add
              </button>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="flex border rounded mt-3 p-3 bg-white"
            >
              <div
                class="w-full"
              >
                <div
                  class="flex items-start space-x-4"
                >
                  <div
                    class="shrink-0"
                  >
                    <div
                      class="flex flex-col items-center mt-1"
                    >
                       
                      <div
                        class="mb-1"
                      >
                         
                        <div
                          class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                        >
                          JS
                        </div>
                      </div>
                      <div
                        class="flex-grow flex flex-col items-center"
                      >
                         
                        <h4
                          class="m-0 text-center"
                        >
                          James Smith
                        </h4>
                         
                         
                      </div>
                    </div>
                  </div>
                  <div
                    class="grow"
                  >
                    <div
                      class="font-semibold text-gray-700 mb-1"
                    >
                      00:05
                    </div>
                    <div
                      class="text-gray-800 leading-relaxed"
                    >
                      Hello world.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex p-3"
    >
      <div
        class="w-full"
      >
        <h3
          class="text-center text-2xl font-bold mb-4 text-gray-800"
        >
          Transcript
        </h3>
        <div
          class="bg-white rounded-lg shadow-md p-6 mb-4"
        >
          <h4
            class="text-lg font-semibold text-gray-800 border-b border-gray-200 pb-2 mb-4"
          >
            Keywords
          </h4>
          <div
            class="flex flex-wrap gap-2 mb-4"
          >
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              madison
              <button
                aria-label="Remove madison"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              james
              <button
                aria-label="Remove james"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              quote
              <button
                aria-label="Remove quote"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              yesterday
              <button
                aria-label="Remove yesterday"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              isabel
              <button
                aria-label="Remove isabel"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
            <span
              class="inline-flex items-center bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full"
            >
              today
              <button
                aria-label="Remove today"
                class="ml-2 inline-flex items-center p-0.5 text-sm text-blue-400 bg-transparent rounded-sm hover:bg-blue-200 hover:text-blue-900"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-2 h-2"
                  fill="none"
                  viewBox="0 0 14 14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Remove pill
                </span>
              </button>
            </span>
          </div>
          <div
            class="flex gap-2"
          >
            <input
              class="grow p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
              placeholder="Add new keyword"
              type="text"
              value=""
            />
            <button
              class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
              type="button"
            >
              Add
            </button>
          </div>
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="flex border rounded mt-3 p-3 bg-white"
          >
            <div
              class="w-full"
            >
              <div
                class="flex items-start space-x-4"
              >
                <div
                  class="shrink-0"
                >
                  <div
                    class="flex flex-col items-center mt-1"
                  >
                     
                    <div
                      class="mb-1"
                    >
                       
                      <div
                        class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
                      >
                        JS
                      </div>
                    </div>
                    <div
                      class="flex-grow flex flex-col items-center"
                    >
                       
                      <h4
                        class="m-0 text-center"
                      >
                        James Smith
                      </h4>
                       
                       
                    </div>
                  </div>
                </div>
                <div
                  class="grow"
                >
                  <div
                    class="font-semibold text-gray-700 mb-1"
                  >
                    00:05
                  </div>
                  <div
                    class="text-gray-800 leading-relaxed"
                  >
                    Hello world.
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TranscriptRow > should render TranscriptRow component with content and highlights 1`] = `
<DocumentFragment>
  <div
    class="flex border rounded mt-3 p-3 bg-white"
  >
    <div
      class="w-full"
    >
      <div
        class="flex items-start space-x-4"
      >
        <div
          class="shrink-0"
        >
          <div
            class="flex flex-col items-center mt-1"
          >
             
            <div
              class="mb-1"
            >
               
              <div
                class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
              >
                JS
              </div>
            </div>
            <div
              class="flex-grow flex flex-col items-center"
            >
               
              <h4
                class="m-0 text-center"
              >
                James Smith
              </h4>
                
            </div>
          </div>
        </div>
        <div
          class="grow"
        >
          <div
            class="font-semibold text-gray-700 mb-1"
          >
            00:10
          </div>
          <div
            class="text-gray-800 leading-relaxed"
          >
            Good morning, &lt;span className="font-bold"&gt;
            <span
              class="bg-yellow-200"
            >
              Madison
            </span>
            &lt;/span&gt;, how are you?
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TranscriptRow > should render TranscriptRow component without highlights if no keywords 1`] = `
<DocumentFragment>
  <div
    class="flex border rounded mt-3 p-3 bg-white"
  >
    <div
      class="w-full"
    >
      <div
        class="flex items-start space-x-4"
      >
        <div
          class="shrink-0"
        >
          <div
            class="flex flex-col items-center mt-1"
          >
             
            <div
              class="mb-1"
            >
               
              <div
                class="rounded-full bg-blue-200 flex justify-center items-center text-gray-800 font-bold w-10 h-10"
              >
                JS
              </div>
            </div>
            <div
              class="flex-grow flex flex-col items-center"
            >
               
              <h4
                class="m-0 text-center"
              >
                James Smith
              </h4>
                
            </div>
          </div>
        </div>
        <div
          class="grow"
        >
          <div
            class="font-semibold text-gray-700 mb-1"
          >
            00:10
          </div>
          <div
            class="text-gray-800 leading-relaxed"
          >
            Good morning, Madison, how are you?
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
